third_party/move/move-compiler/tests/move_check/unit_test/test_filter_function.exp
error[E03009]: unbound variable
  ┌─ tests/move_check/unit_test/test_filter_function.move:6:24
  │
6 │     public fun foo() { bar() }
  │                        ^^^ Invalid function usage. Unbound variable 'bar'

